--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -40,36 +40,35 @@
   position: absolute;
   z-index: 99;
   left: 15px;
-  top: 18px
+  top: 18px;
 }
-
 
 @media (max-width: 768px) {
   .grid_gallery {
     grid-template-columns: repeat(3, 1fr); /* 3 columns */
   }
-  
+
   .featured_image {
     grid-row: span 2; /* Spans 2 rows */
     grid-column: span 3; /* Spans 3 columns */
   }
-  
+
   .single_image {
     grid-row: span 1;
     grid-column: span 1;
   }
 }
 
-@media (max-width: 640px) { 
+@media (max-width: 640px) {
   .grid_gallery {
     grid-template-columns: repeat(2, 1fr); /* 3 columns */
   }
-  
+
   .featured_image {
     grid-row: span 2; /* Spans 2 rows */
     grid-column: span 2; /* Spans 3 columns */
   }
-  
+
   .single_image {
     grid-row: span 1;
     grid-column: span 1;
